2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_permissions using
	nautilus_file_set_attributes.

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        Add nautilus_file_set_attributes

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Add gnome_vfs_result_to_error call
	
        * libnautilus-private/nautilus-file.[ch]:
	Convert renaming to use gio.
	Pass GError instead of GnomeVFSResult in
	NautilusFileOperationCallback
	
        * src/file-manager/fm-error-reporting.c:
        * src/file-manager/fm-error-reporting.h:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to the NautilusFileOperationCallback API change

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read can_delete and can_rename from gio.
	Use can_rename in nautilus_file_can_rename.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_edit_name()

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
	Make string args const char * where possible.

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read display_name and edit_name from gio.
	Kill old cached_display_name creation.
	Use eel_ref_str for name, display_name, edit_name and make sure to
	share them when possible.
	Old use of display_name as the link info only is moved so that
	its shared with the normal name, with got_custom_display_name showing
	where its from.
